--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
-	"wallpaper_path": "/path/to/wallpaper/folder",
+	"wallpaper_path": "/home/alex/Pictures/wallpapers",
+	"_wallpaper_path": "/path/to/wallpaper/folder",
 	"debug": false,
 	"ui_scale_factor": 0.5,
 	"prefered_fetch_tool": "fastfetch"
