--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"_wallpaper_path": "/path/to/wallpaper/folder",
-	"_waybar_colors_path": "/path/to/waybar/colors.css",
+	"wallpaper_path": "/path/to/wallpaper/folder",
+	"waybar_colors_path": "/path/to/waybar/colors.css",
 	"debug": false,
 	"ui_scale_factor": 0.5,
 	"prefered_fetch_tool": "fastfetch"
